add footer and link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         </section>
             <div>   
             </div>
-            <footer>  
+            <footer>
+                <div class="full-width">
+                    <h5>Powered by <span><a href="http://www.jechevarria.com" target="_BLANK">javibier</a></span></h5>
+                </div>
             </footer>
         </main>
     </body>
