add about section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     	<header>
             <div class="full-width">  
                 <div class="half-width">
-    		    	<h1>javier echevarria | financial consultant</h1>
+    		    	<h1>javier echevarria = financial consultant</h1>
     		    </div>
     		    <div>
     		    	
@@ -19,8 +19,14 @@
     	</header>
     	<main>
         <section>
-    		<div>
-    		</div>
+            <div class="full-width" id="about">
+                <h2>about me</h2>
+                    <div class="full-width">
+                        <h3>I am passionate about accouting, finance and numbers.</h3>
+                        <p>I love accounting and seeing what I do make sense. I have been working in accounting for over 30 years, since I have started my love for it has only grown.</p>
+                        <p>Can't wait to help you make sense of your numbers.</p>
+                    </div>
+            </div>
         </section>
             <div>   
             </div>
