--- a/index.html
+++ b/index.html
@@ -31,15 +31,13 @@
                 <h2>let's connect</h2>
                 <div class="third-width">
                     <h3 id="hire-invite">Hire Me</h3>
-                    <h3 id="email-header">Send me your idea and let's get to work.<br><br>
+                    <h3 id="email-header">Send me your numbers and let's get to work.<br><br>
                         <a href="mailto:javierechemia@gmail.com"><img src="img/envelope.png" id="envelope" alt="Envelope icon" /></a></h3>
                 </div>
                 <div class="third-width" id="contact-info">
                     <h3 id="socialmedia-header">Follow Me</h3>
                     <ul>
-                        <li><a href="http://www.github.com/javibier" target="_Blank"><img src="img/github.png" alt="Github icon" /></a></li>
-                        <li><a href="http://www.linkedin.com/in/javierechevarria1/javibier" target="_Blank"><img src="img/Linkedin.png" alt="Linkedin icon" /></a></li>
-                        <li><a href="http://www.instagram.com/echevarria8405/" target="_Blank"><img src="img/Twitter.png" alt="Instagram icon" /></a></li>
+                        <li><a href="http://www.linkedin.com/in/javierechevarria1/javibier" target="_Blank"><img src="img/linkedin.png" alt="Linkedin icon" /></a></li>
                     </ul>
                 </div>
                 <div class="third-width">
