revise contact section

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                 <div class="third-width">
                     <h3 id="hire-invite">Hire Me</h3>
                     <h3 id="email-header">Send me your numbers and let's get to work.<br><br>
-                        <a href="mailto:javierechemia@gmail.com"><img src="img/envelope.png" id="envelope" alt="Envelope icon" /></a></h3>
+                        <a href="mailto:javierechemia@gmail.com"><img width="70" height="50" src="img/envelope2.png" id="envelope" alt="Envelope icon" /></a></h3>
                 </div>
                 <div class="third-width" id="contact-info">
                     <h3 id="socialmedia-header">Follow Me</h3>
                     <ul>
-                        <li><a href="http://www.linkedin.com/in/javierechevarria1/javibier" target="_Blank"><img src="img/linkedin.png" alt="Linkedin icon" /></a></li>
+                        <li><a href="http://www.linkedin.com/in/javierechevarria1/javibier" target="_Blank"><img width="80" height="80" src="img/linkedin2.png" alt="Linkedin icon" /></a></li>
                     </ul>
                 </div>
                 <div class="third-width">
