revise font sizea

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="full-width" id="about">
                 <h2>about me</h2>
                     <div class="full-width">
-                        <h3>I am passionate about accouting, finance and numbers.</h3>
+                        <h3><em>I am passionate about accouting, finance and numbers.</em></h3>
                         <p>I love accounting and seeing what I do make sense. I have been working in accounting for over 30 years, since I have started my love for it has only grown.</p>
                         <p>Can't wait to help you make sense of your numbers.</p>
                     </div>
@@ -40,8 +40,8 @@
                         <li><a href="http://www.linkedin.com/in/javierechevarria1/javibier" target="_Blank"><img width="80" height="80" src="img/linkedin2.png" alt="Linkedin icon" /></a></li>
                     </ul>
                 </div>
-                <div class="third-width">
-                    <h3 id="invitation">Let's meet for coffee</h3>
+                <div class="third-width" id="invitation">
+                    <h3>Let's meet for coffee</h3>
                 </div> 
             </div>
         </section>
