--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content= "Javier Echevarria | Web Developer with a passion for writing code and creating dynamic websites" />
+        <meta name="description" content= "Javier Echevarria | Accountant I am passionate about accouting, finance and numbers" />
         <title>Javier Echevarria | financial consultant</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
