change col for RWD

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </head>
     <body>
     	<header>
-            <div class="full-width">  
-                <div class="half-width">
+            <div class="col-12">  
+                <div class="col-6">
     		    	<h1>javier echevarria | financial consultant</h1>
     		    </div>
     		    <div>
