--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     	</header>
     	<main>
         <section>
-            <div class="full-width" id="about">
+            <div class="col-12" id="about">
                 <h2>about me</h2>
-                    <div class="full-width">
+                    <div class="col-12">
                         <h3><em>I am passionate about accounting, finance and numbers.</em></h3>
                         <p>I love accounting and seeing what I do make sense. I have been working in accounting for over 30 years, since I have started my love for it has only grown.</p>
                         <p>Can't wait to help you make sense of your numbers.</p>
                     </div>
             </div>
-              <div class="full-width" id="contact">
+              <div class="col-12" id="contact">
                 <h2>let's connect</h2>
                 <div class="third-width">
                     <h3 id="hire-invite">Hire Me</h3>
