update col for RWD

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
             </div>
               <div class="col-12" id="contact">
                 <h2>let's connect</h2>
-                <div class="third-width">
+                <div class="col-4">
                     <h3 id="hire-invite">Hire Me</h3>
                     <h3 id="email-header">Send me your numbers and let's get to work.<br><br>
                     <a href="mailto:javierechemia@gmail.com"><img width="70" height="50" src="img/envelope2.png" id="envelope" alt="Envelope icon" /></a></h3>
                      <h3 id="hire-invite">Let's meet for coffee</h3>
                      
                 </div>
-                <div class="third-width" id="contact-info">
+                <div class="col-4" id="contact-info">
                     <h3 id="socialmedia-header">Follow Me</h3>
                     <ul>
                         <li><a href="http://www.linkedin.com/in/javierechevarria1/javibier" target="_Blank"><img width="80" height="80" src="img/linkedin2.png" alt="Linkedin icon" /></a></li>
@@ -49,7 +49,7 @@
             <div>   
             </div>
             <footer>
-                <div class="full-width">
+                <div class="col-12">
                     <h5>Powered by <span><a href="http://www.jechevarria.com" target="_BLANK">javibier</a></span></h5>
                 </div>
             </footer>
