--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     	<main>
         <section>
             <div class="col-12" id="about">
-                <h2>about me</h2>
+                <h2>about us</h2>
                     <div class="col-12">
                         <h3><em>I am passionate about accounting, finance and numbers.</em></h3>
-                        <p>I love accounting and seeing what I do make sense. I have been working in accounting for over 30 years, since I have started my love for it has only grown.</p>
+                        <p>I love accounting and seeing what I do make sense. I have been working in accounting for over 20 years, since I have started my love for it has only grown.</p>
                         <p>Can't wait to help you make sense of your numbers.</p>
                     </div>
             </div>
