--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div class="col-12" id="about">
                 <h2>about us</h2>
                     <div class="col-12">
-                        <h3><em>I am passionate about accounting, finance and numbers.</em></h3>
-                        <p>I have been working in accounting for over 20 years, since I have started my love for it has only grown.</p>
+                        <h3><em>We are passionate about accounting, finance and numbers.</em></h3>
+                        <p>We have been working in accounting for over 20 years, since I have started my love for it has only grown.</p>
                         <p>Can't wait to help you make sense of your numbers.</p>
                     </div>
             </div>
