--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
                     </div>
             </div>
               <div class="col-12" id="contact">
-                <h2>let's connect</h2>
+                <h2>Hire Us</h2>
                 <div class="col-4">
-                    <h3 id="hire-invite">Hire Me</h3>
                     <h3 id="email-header">Send me your numbers and let's get to work.<br><br>
                     <a href="mailto:javierechemia@gmail.com"><img width="70" height="50" src="img/envelope2.png" id="envelope" alt="Envelope icon" /></a></h3>
                      
