--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                      
                 </div>
                 <div class="col-4" id="contact-info">
-                    <h3 id="socialmedia-header">Follow Me</h3>
+                    <h3 id="socialmedia-header">Contact Us</h3>
                     <ul>
                         <li><a href="http://www.linkedin.com/in/javierechevarria1/javibier" target="_Blank"><img width="80" height="80" src="img/linkedin2.png" alt="Linkedin icon" /></a></li>
                     </ul>
