--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                      
                 </div>
                 <div class="col-4" id="contact-info">
-                    <h3 id="socialmedia-header">Contact Us</h3>
+                    <h3 id="socialmedia-header">Contact</h3>
                 </div>
             </div>
         </section>
