--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
               <div class="col-12" id="contact">
                 <h2>Hire Us</h2>
                 <div class="col-4">
-                    <h3 id="email-header">Send me your numbers and let's get to work.<br><br>
-                    <a href="mailto:javierechemia@gmail.com"><img width="70" height="50" src="img/envelope2.png" id="envelope" alt="Envelope icon" /></a></h3>
-                     
+                    <h3 id="email-header">Send me your numbers and let's get to work.</h3>
                 </div>
                 <div class="col-4" id="contact-info">
                     <h3 id="socialmedia-header">Contact</h3>
+                    <a href="mailto:javierechemia@gmail.com"><img width="70" height="50" src="img/envelope2.png" id="envelope" alt="Envelope icon" /></a></h3>
                 </div>
             </div>
         </section>
