--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <h3 id="email-header">Send me your numbers and let's get to work.</h3>
                 </div>
                 <div class="col-4" id="contact-info">
-                    <h3 id="socialmedia-header">Contact</h3>
+                    <h3 id="socialmedia-header">Contact<br><br>
                     <a href="mailto:javierechemia@gmail.com"><img width="70" height="50" src="img/envelope2.png" id="envelope" alt="Envelope icon" /></a></h3>
                 </div>
             </div>
