--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 </div>
                 <div class="col-4" id="contact-info">
                     <h3 id="socialmedia-header">Contact<br><br>
-                    <a href="mailto:javierechemia@gmail.com"><img width="70" height="50" src="img/envelope2.png" id="envelope" alt="Envelope icon" /></a></h3>
+                    <a href="mailto:javierechemia@gmail.com"><img width="70" height="50" src="img/envelope2.png" id="envelope" alt="Envelope icon" /></a><br><br>
+                    (305) 748-1367</h3>
                 </div>
             </div>
         </section>
