--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
               <div class="col-12" id="contact">
                 <h2>Hire Us</h2>
                 <div class="col-4">
-                    <h3 id="email-header">Send me your numbers and let's get to work.</h3>
+                    <h3 id="email-header">Send me your numbers<br> 
+                    and let's get to work.</h3>
                 </div>
                 <div class="col-4" id="contact-info">
                     <h3 id="socialmedia-header">Contact<br><br>
