--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     	<header>
             <div class="col-12">  
                 <div class="col-6">
-    		    	<h1>javier echevarria | financial consultant</h1>
+    		    	<h1>je financial services</h1>
     		    </div>
     		    <div>
     		    	
