--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             <div class="col-12" id="about">
                 <h2>about us</h2>
                     <div class="col-12">
-                        <h3><em>We are passionate about accounting, finance and numbers.</em></h3>
-                        <p>We have been working in accounting for over 20 years, since then our love for it has only grown.</p>
+                        <h3><em>We are passionate about accounting and finance.</em></h3>
+                        <p>We have been working with numbers for over 20 years, since then our love for it has only grown.</p>
                         <p>Can't wait to help you make sense of your numbers.</p>
                     </div>
             </div>
               <div class="col-12" id="contact">
-                <h2>Hire Us</h2>
+                <h2>hire us</h2>
                 <div class="col-4">
                     <h3 id="email-header">Send me your numbers<br> 
                     and let's get to work.</h3>
