--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <div class="col-6">
     		    	<h1>je financial services</h1>
     		    </div>
-    		    <div>
-    		    	
+    		    <div class="col-12">
+    		        <p>JE Financial Services offers top-notch service to companies that have accounting needs and should outsource certain accounting functions because an accounting staff is just a waste of valuable resources such as space, assets, time and money.</p>
     		    </div>
             </div>
     	</header>
