--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     		    	<h1>je financial services</h1>
     		    </div>
     		    <div class="col-12">
-    		        <p>JE Financial Services offers top-notch service to companies that have accounting needs and should outsource certain accounting functions because an accounting staff is just a waste of valuable resources such as space, assets, time and money.</p>
+    		        <p>JE Financial Services offers top-notch outsouce accounting services to companies that have accounting needs and should outsource certain accounting functions because an accounting staff is just a waste of valuable resources such as space, assets, time and most importantly money.</p>
     		    </div>
             </div>
     	</header>
