--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     		    	<h1>je financial services</h1>
     		    </div>
     		    <div class="col-12">
-    		        <p>JE Financial Services offers top-notch outsouce accounting services to companies that have accounting needs and should outsource certain accounting functions because an accounting staff is just a waste of valuable resources such as space, assets, time and most importantly money.</p>
+    		        <p>We offer top-notch accouting outsource services<br> to companies that have accounting needs and look to outsource <br>certain accounting functions in order to eliminate the expense of valuable<br> resources such as space, assets, time and most importantly money.<br><br>Furthermore, we offer a combination of functions in order to offer the maximum potential savings.<br><br><em>•   Outsource Controller<br>
+                     •   Outsource Senior Accountant<br>
+                     •   Outsource Financial Services<br>
+                     •   Outsource Accounts Receivables/Payable<br>
+                     •   Outsource Payroll<br><em></p>
     		    </div>
             </div>
     	</header>
