--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                      •   Outsource Senior Accountant<br>
                      •   Outsource Financial Services<br>
                      •   Outsource Accounts Receivables/Payable<br>
-                     •   Outsource Payroll<br></em></p>
+                     •   Outsource Payroll<br></em>
+                     •   Software Implementation/Migrations<br></em>
+                     </p>
     		    </div>
             </div>
     	</header>
