--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     		    <div class="col-12">
     		        <p>We offer top-notch accouting outsource services<br> to companies that have accounting needs and look to outsource <br>certain accounting functions in order to eliminate the expense of valuable<br> resources such as space, assets, time and most importantly money.<br><br>Furthermore, we offer a combination of functions in order to offer the maximum potential savings.<br><br><em>•   Outsource Controller<br>
                      •   Outsource Accounting<br>
+                     •   Outsource Bookkeeping<br></em>
                      •   Outsource Financial Analyst<br>
                      •   Outsource Accounts Receivables/Payable<br>
                      •   Outsource Payroll<br></em>
