--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                 <h2>about us</h2>
                     <div class="col-12">
                         <h3><em>We are passionate about accounting and finance.</em></h3>
-                        <p>We are senior-level accounting professionals that have been working with numbers for over 23 years, since then our love for it has only grown.</p>
-                        <p>Our expertise lies in te ability to effectively interact, identify root causes and develope applicable stratergies in order to achive your financial goal.</p>
+                        <p>We are senior-level accounting professionals that have been working with numbers for over 23 years, since then our love for it has only grown.<br>
+                        Our expertise lies in te ability to effectively interact, identify root causes and develope applicable stratergies in order to achive your financial goal.<br>
+                        We take pride in bringing integrity and professionalism into the what we do.<br>We are confident that our skills would be an asset to the financial infrastruture of your company.</p>
                         <p>Can't wait to help you make sense of your numbers.</p>
                     </div>
             </div>
