update contact text dim

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <div class="col-12" id="contact">
                 <h2>hire us</h2>
                 <div class="col-4">
-                    <h3 id="email-header">Send us your numbers<br> 
+                    <h3>Send us your numbers<br> 
                     and let's get to work.</h3>
                 </div>
                 <div class="col-4" id="contact-info">
