update contact text dim

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     and let's get to work.</h3>
                 </div>
                 <div class="col-4" id="contact-info">
-                    <h3 id="socialmedia-header">Contact<br><br>
+                    <h4>Contact<br><br>
                     <a href="mailto:javierechemia@gmail.com"><img width="70" height="50" src="img/envelope2.png" id="envelope" alt="Envelope icon" /></a><br><br>
-                    (305) 748-1367</h3>
+                    (305) 748-1367</h4>
                 </div>
             </div>
         </section>
