--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content= "Javier Echevarria | Accountant with a passionate for accounting, finance and numbers" />
+        <meta name="description" content= "Javier Echevarria | Accountant with a passion for accounting, finance and numbers" />
         <title>JE Financial Services</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
