--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     	</header>
     	<main>
         <section>
+          <div class="parallax"></div>
             <div class="col-12" id="about">
                 <h2>about us</h2>
                     <div class="col-12">
@@ -38,6 +39,7 @@
                         <p>Can't wait to help you make sense of your numbers.</p>
                     </div>
             </div>
+          <div class="parallax"></div>
               <div class="col-12" id="contact">
                 <h2>hire us</h2>
                 <div class="col-4">
@@ -50,6 +52,7 @@
                     (305) 748-1367</h4>
                 </div>
             </div>
+          <div class="parallax"></div>
         </section>
             <div>   
             </div>
