--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+      <div class="parallax"></div>
     	<header>
             <div class="col-12">  
                 <div class="col-6">
@@ -58,5 +59,6 @@
                     <h5>Powered by <em><span><a href="http://www.jechevarria.com" target="_BLANK">javibier</a></span></em></h5>
             </footer>
         </main>
+      <div class="parallax"></div>
     </body>
 </html>
