--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <div class="parallax"></div>
     	<header>
             <div class="col-12">  
-                <div class="col-6">
+                <div class="col-6" style="height:100px; background-color:white; font-size:22px">
     		    	<h1>je financial services</h1>
     		    </div>
-    		    <div class="col-12">
+    		    <div class="col-12" style="height:400px; background-color:white; font-size:22px">
     		        <p>We offer top-notch accounting outsource services<br> to companies with accounting needs and look to outsource <br>certain accounting functions in order to eliminate the expense of valuable<br> resources such as space, assets, time and most importantly money.<br><br>Furthermore, we offer a combination of functions in order to offer the maximum potential savings.<br><br><em>•   Outsource Controller<br>
                      •   Outsource Accounting<br>
                      •   Outsource Bookkeeping<br>
