--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     		    <h1>je financial services</h1>
     		</div>
         </header>
-    		    <div class="col-12" style="height:400px; background-color:white; font-size:22px">
+        <main>
+          <section>
+    		    <div class="col-12" style="services">
     		        <p>We offer top-notch accounting outsource services<br> to companies with accounting needs and look to outsource <br>certain accounting functions in order to eliminate the expense of valuable<br> resources such as space, assets, time and most importantly money.<br><br>Furthermore, we offer a combination of functions in order to offer the maximum potential savings.<br><br><em>•   Outsource Controller<br>
                      •   Outsource Accounting<br>
                      •   Outsource Bookkeeping<br>
@@ -26,9 +28,6 @@
                      </p>
     		    </div>
             </div>
-    	
-    	<main>
-        <section>
             <div class="col-12" id="about">
                 <h2>about us</h2>
                     <div class="col-12">
