--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </header>
         <main>
           <section>
-    		    <div class="col-12" style="services">
+    		    <div class="col-12" id="services">
     		        <p>We offer top-notch accounting outsource services<br> to companies with accounting needs and look to outsource <br>certain accounting functions in order to eliminate the expense of valuable<br> resources such as space, assets, time and most importantly money.<br><br>Furthermore, we offer a combination of functions in order to offer the maximum potential savings.<br><br><em>•   Outsource Controller<br>
                      •   Outsource Accounting<br>
                      •   Outsource Bookkeeping<br>
