update contact text

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     and let's get to work.</h3>
                 </div>
                 <div class="col-4" id="hire-invite">
-                    <h4>Contact us  for a NO OBLIGATION customized cost benefit analysis of outsourcing opportunities in your organization<br><br>
-                    <a href="mailto:javier@jefinserv.com"><img width="70" height="50" src="img/envelope2.png" id="envelope" alt="Envelope icon" /></a><br><br>
+                    <h4>Contact us for a NO OBLIGATION customized cost benefit analysis of outsourcing opportunities in your organization<br><br>
+                    <a href="mailto:javier@jefinserv.com"><img width="50" height="40" src="img/envelope2.png" id="envelope" alt="Envelope icon" /></a><br><br>sales@jefinserv.com<br>
                     (305) 748-1367</h4>
                 </div>
             </div>
